# fjpythia

./: .gitignore  README.md
include/fjpythia/eic/: example.h
include/fjpythia/jose/: fj_and_root.h
include/fjpythia/mateusz/: fj_and_root.h
include/fjpythia/riley/: fj_and_root.h
include/fjpythia/util/: argparser.h  fjutils.h  looputil.h  pyutils.h  strutil.h  userinfo.h
scripts/: .gitignore  build.sh  clean_all.sh  cleanup_external_lib_builds.sh  install_fastjet3.sh  install_pythia8.sh  make_root_setup.sh  root6_setup.sh  run.sh  run_youqi.sh  setup.sh
src/: CMakeLists.txt
src/cmake/: install_targets_custom.cmake  set_headers_lib.cmake
src/eic/: CMakeLists.txt  example.cxx  main.cxx
src/jose/: CMakeLists.txt  fj_and_root.cxx  main.cxx
src/mateusz/: CMakeLists.txt  example.cxx  fj_and_root.cxx  main.cxx
src/riley/: CMakeLists.txt  fj_and_root.cxx  main.cxx
src/util/: CMakeLists.txt  argparser.cxx  fjutils.cxx  looputil.cxx  pyutils.cxx  strutil.cxx  userinfo.cxx
src/youqi/: CMakeLists.txt  fj_and_root.cxx
